--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "react-debounce-input": "^2.4.0",
     "react-dom": "15.3.2",
     "react-redux": "4.4.5",
-    "react-router": "4.0.0-alpha.3",
+    "react-router": "2.4.0",
     "react-router-redux": "^4.0.4",
     "react-tooltip": "^3.1.8",
     "redux": "3.5.2",
